--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%; 
+ 
+}
 body { margin: 0; font-family: 'Roboto', sans-serif; }
 
 .example-form {
@@ -72,6 +74,7 @@ body { margin: 0; font-family: 'Roboto', sans-serif; }
 #back{
     background-color: rgb(176, 14, 35);
       height: 50%;
+      background-attachment: fixed;
   }
   input{
     border-radius: 0px;
