--- a/src/app/SharePart/logged-header/logged-header.component.html
+++ b/src/app/SharePart/logged-header/logged-header.component.html
@@ -1,20 +1,20 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<nav id="navBar" class="navbar navbar-expand-lg ">
+<nav id="navBar" class="navbar navbar-expand-lg navbar-dark ">
+
   <a class="navbar-brand" href="#"><img src="assets/_image/cslogo.png" id="navbarimage"></a>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+  </a>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/profile/home" routerLinkActive="active ">Home </a>
+        <a class="nav-link" routerLink="/profile/home" routerLinkActive="active">Home </a>
       </li>
       <li class="nav-item">
-        <a *ngIf="islogged" class="nav-link" routerLink="/trip" routerLinkActive="active ">Trip </a>
+        <a *ngIf="islogged" class="nav-link" routerLink="/trip" routerLinkActive="active">Trip </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/profile/list" routerLinkActive="active ">Employee</a>
