--- a/src/app/events/view-event-page/view-event-page.component.html
+++ b/src/app/events/view-event-page/view-event-page.component.html
@@ -6,32 +6,108 @@
   </head>
 
 
-<body>
-    <div style="margin-left: 10cm;margin-right: 9cm">
-<h3>
-{{event.eventTitle}}
- </h3>
- </div>
-<br/><br/>
- <img src= {{image}} style="width:40%; margin-left: 8cm">
+<div id="wrapper">
 
- <br/><br/>
- <div style="margin-left: 8cm;margin-right: 8cm">
-<p >
-  {{event.eventDescription}}
-</p>
-<br/>
- <p>
-    <span class="glyphicon glyphicon-calendar"></span>
-    Date : {{event.startDate}}
- </p>
- <p>
-    <span class="glyphicon glyphicon-map-marker"></span>
-    {{destOrVen}} : {{event.destination}}
- </p>
- <br/><br/>
- <button type="button" class="btn btn-outline-success" (click)="register()">Register now!</button>
+    <div  id="sticky"class="panels" >
+        
+        <img id="image" src={{image}}>
+        
+          
+    </div>
+   <div id="second"  class="panels">
+
+
+     <div id ="secondNote">
+        <br/>
+     <p>{{event.eventTitle}}</p>
+     <br/>
+     <div class="row" id="inside">
+       <div class="col-xs-1" ></div>
+        <div class="col-xs-5">
+          <h2>About the Event</h2>
+          <p>{{event.eventDescription}}</p>
+        </div>
+        <div class="col-xs-3">
+            <h3>Where</h3>
+            <p>{{event.destination}}</p>
+          </div>
+          <div class="col-xs-3">
+              <h3>When</h3>
+              <p>{{event.startDate}}</p>
+            </div>
+      </div>
+      <br/><br/>
+     </div>
+
+    
+     
+
+   </div>
+   
+    <div id="b" class="panels">
+      <div id="note">
+          <br/><br/> 
+            <br/><br/>         
+            <div class="row" id="row">
+
+                <div class="col-sm-1"></div>
+                <div class="col-sm-3"id="row">
+                    <a href="events/upComingEvents"  >
+                  <div class="card mb-5 text-center" style="width: 24rem;">
+                    <img class="card-img-top" id="cimage"src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h4 class="card-title">Tasks</h4>
+                     
+                      
+                     
+                    </div>
+                  </div>
+                  </a>
+                </div>
+            
+            
+                <div class="col-sm-3">
+                    <a href="events/previousEvent"  >
+                    <div class="card mb-5 text-center" style="width: 24rem;">
+                      <img class="card-img-top"id="cimage" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h4 class="card-title">Register</h4>
+                       
+                      </div>
+                    </div>
+                    </a>
+                  </div>
+            
+            
+                  <div class="col-sm-3">
+                      <a href="events/viewTask"  >
+                      <div class="card mb-5 text-center" style="width: 24rem;">
+                        <img class="card-img-top"id="cimage" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
+                        <div class="card-body">
+                          <h4 class="card-title">Registered Employees</h4>
+                          
+                          
+                         
+                        </div>
+                      </div>
+                      </a>
+                    </div>
+
+                    <div class="col-sm-1"></div>
+
+            </div>
+              
+
+    </div>
+    
+    
+    </div>
 </div>
-  <br/><br/>
 
- </body>
+
+
+  
+
+
+
+
