--- a/src/app/profile/homepage/homepage.component.html
+++ b/src/app/profile/homepage/homepage.component.html
@@ -20,13 +20,19 @@
 <div id="part0">
 <h1>Event Managment</h1>
 <h1>System</h1>
+<div id="bottomright">
+  <h2> event managment system</h2>
+  <h2> event managment system</h2>
+  <h2> event managment system</h2>
+
+</div>
 
 </div>
 
 <div id="part1">
-  
+  <h1  id="cardtopic1">Card Topic</h1>
     <div id="cardDesk" class="card-deck" >
-        <div class="card">
+        <div id="card1" class="card">
           <img class="card-img-top" src="assets\_image\employees_card_31256.png" alt="Card image cap">
           <div class="card-body">
             <a href="/task/addtask"><h5 class="card-title">Assignments</h5></a> 
@@ -34,7 +40,7 @@
           </div>
         </div>
     
-        <div class="card">
+        <div id="card2" class="card">
           <img class="card-img-top" src="assets\_image\assi.png" alt="Card image cap">
           <div class="card-body">
             <a href="/task/list"><h5 class="card-title">Overview</h5></a>
@@ -42,7 +48,7 @@
           </div>
         </div>
         
-        <div class="card">
+        <div id="card3" class="card">
           <img class="card-img-top" src="assets\_image\email.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Email Tasks</h5>
@@ -54,8 +60,9 @@
 </div>
 
 <div id="part2">
+    <h1  id="cardtopic2">Card Topic</h1>
     <div id="cardDesk" class="card-deck" >
-        <div class="card">
+        <div id="card3" class="card">
           <img class="card-img-top" src="assets\_image\employees_card_31256.png" alt="Card image cap">
           <div class="card-body">
             <a href="/task/addtask"><h5 class="card-title">Assignments</h5></a> 
@@ -63,7 +70,7 @@
           </div>
         </div>
     
-        <div class="card">
+        <div id="card2" class="card">
           <img class="card-img-top" src="assets\_image\assi.png" alt="Card image cap">
           <div class="card-body">
             <a href="/task/list"><h5 class="card-title">Overview</h5></a>
@@ -71,7 +78,7 @@
           </div>
         </div>
         
-        <div class="card">
+        <div id="card1" class="card">
           <img class="card-img-top" src="assets\_image\email.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Email Tasks</h5>
