--- a/src/app/profile/Employee/employee-profile/employee-profile.component.html
+++ b/src/app/profile/Employee/employee-profile/employee-profile.component.html
@@ -1,8 +1,5 @@
-<app-logged-header></app-logged-header>
-<br>
 
-
-<section class="testimonial py-5 container" id="testimonial">
+<!-- <section class="testimonial py-5 container" id="testimonial">
     <div class="container">
         <div class="row ">
             <div class="col-md-4 py-5 text-white text-center " id="sideA">
@@ -52,4 +49,141 @@
         </div>
     </div>
   </section>
-  
+   -->
+   <div id="back">
+   <app-logged-header></app-logged-header>
+   <!-- <div class="row">
+    <div class="col-8">
+
+        <div class="container">
+            <h3></h3>
+                <div class="row">
+                  <div class="col-4">
+                    <img [src]="ProfileImage" style="width:70%" class="rounded-circle">
+                  </div>
+                  <div class="col-8">
+                    <h3>{{result.empName}}</h3><br><br>
+                    <h5>{{result.empPosition}}</h5>
+                    <h5>{{result.empEmail}}</h5>
+                    <h5>{{result.empDepartment}}</h5> 
+                  </div>
+                  
+                </div>
+        </div>
+
+            </div>
+            <div class="col-3">
+                <h3>Our Team</h3>
+                    <div class="list">
+                             <ul>
+                              <li>
+                                    <img [src]="ProfileImage" style="width:20%" class="rounded-circle">
+                                    <a href="#">{{result.empName}}</a></li>
+                              
+                             </ul>
+                              
+                            
+                          </div>
+                    </div>
+
+             
+                </div> -->
+                <div class="row ">
+                    <main role="main" class="container">
+                        <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-silver rounded box-shadow">
+                          <img [src]="ProfileImage" width="150" height="150">
+
+                          <div class="lh-100">
+                            <h6 class="mb-0 text-white lh-100">{{result.empName}}</h6>
+                            <small>{{result.empPosition}}</small>
+                            <table class="cntent">
+                                <tr>
+                                    <td><img src="assets/email.png" class="icon" width="25" height="25"></td>
+                                    <td><h5 class="mb-0 text-white lh-100">{{result.empEmail}}</h5></td>
+                                </tr>
+                                <tr>
+                                    <td><img src="assets/project.png" class="icon" width="25" height="25"></td>
+                                    <td><h5 class="mb-0 text-white lh-100">{{result.empDepartment}}</h5></td>
+                                </tr>
+                                <tr>
+                                    <td><img src="assets/email.png" class="icon" width="25" height="25"></td>
+                                    <td><h5 class="mb-0 text-white lh-100"></h5>since 2018</td>
+                                </tr>
+
+                        
+                        </table>
+                          </div>
+                        </div>
+                  
+                        <div class="my-3 p-3 bg-white rounded box-shadow">
+                          <h6 class="border-bottom border-gray pb-2 mb-0">Recent Tasks</h6>
+                          <div class="media text-muted pt-3">
+                            <img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
+                            <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                              <strong class="d-block text-gray-dark">@username</strong>
+                              Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                            </p>
+                          </div>
+                          <div class="media text-muted pt-3">
+                            <img data-src="holder.js/32x32?theme=thumb&bg=e83e8c&fg=e83e8c&size=1" alt="" class="mr-2 rounded">
+                            <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                              <strong class="d-block text-gray-dark">@username</strong>
+                              Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                            </p>
+                          </div>
+                          <div class="media text-muted pt-3">
+                            <img data-src="holder.js/32x32?theme=thumb&bg=6f42c1&fg=6f42c1&size=1" alt="" class="mr-2 rounded">
+                            <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                              <strong class="d-block text-gray-dark">@username</strong>
+                              Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                            </p>
+                          </div>
+                          <small class="d-block text-right mt-3">
+                            <a href="#">All updates</a>
+                          </small>
+                        </div>
+                  
+                        <div class="my-3 p-3 bg-white rounded box-shadow">
+                          <h6 class="border-bottom border-gray pb-2 mb-0">Suggestions</h6>
+                          <div class="media text-muted pt-3">
+                            <img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
+                            <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                              <div class="d-flex justify-content-between align-items-center w-100">
+                                <strong class="text-gray-dark">Full Name</strong>
+                                <a href="#">Follow</a>
+                              </div>
+                              <span class="d-block">@username</span>
+                            </div>
+                          </div>
+                          <div class="media text-muted pt-3">
+                            <img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
+                            <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                              <div class="d-flex justify-content-between align-items-center w-100">
+                                <strong class="text-gray-dark">Full Name</strong>
+                                <a href="#">Follow</a>
+                              </div>
+                              <span class="d-block">@username</span>
+                            </div>
+                          </div>
+                          <div class="media text-muted pt-3">
+                            <img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">
+                            <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                              <div class="d-flex justify-content-between align-items-center w-100">
+                                <strong class="text-gray-dark">Full Name</strong>
+                                <a href="#">Follow</a>
+                              </div>
+                              <span class="d-block">@username</span>
+                            </div>
+                          </div>
+                          <small class="d-block text-right mt-3">
+                            <a href="#">All suggestions</a>
+                          </small>
+                        </div>
+                      </main>
+                  
+                </div>
+</div>
+
+
+
+   
