--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,12 @@
 
 <div class="top">
     <div class="titleBar">
-            <div class="row ">
+            <div class=" row ">
             <div class="col-2">
                     <img src="assets/_image/logo-white.png" >
             </div>
             <div class="col-8">
-
                     <h1 >TheEvent</h1>
-
-                    <!-- <h1 >Event Management </h1> -->
 
             </div>
             <div class="col-2"></div>
@@ -32,7 +29,7 @@
       </div>
 
     </div>
-
+</div>
    
 
 
