--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
 
+
 .example-form {
     min-width: 150px;
     max-width: 500px;
@@ -44,7 +45,7 @@ body { margin: 0; font-family: 'Roboto', sans-serif; }
 
   body{
    
-    background-color: rgba(196, 199, 199, 0.452);
+    /* background-color: rgba(196, 199, 199, 0.452); */
   
     background-size: cover;
 
