--- a/src/app/profile/homepage/homepage.component.css
+++ b/src/app/profile/homepage/homepage.component.css
@@ -18,7 +18,7 @@
     padding: 20px;
  }
  #part2{
-    background-color: rgb(174,14,35);
+    background-color: rgb(240, 241, 241);
     height: 750px;  padding: 20px;
  }
  #part3{
