--- a/src/app/profile/signup-employee/signup-employee.component.html
+++ b/src/app/profile/signup-employee/signup-employee.component.html
@@ -73,6 +73,13 @@
                       <em *ngIf="validateControl('address2') && hasError('address2', 'maxlength')">*Maximum allowed length is 6 characters.</em>
              
                   </div>
+                  <div class="form-group col-md-6">
+                   
+                    <select class="form-control" formControlName="project" placeholder="project" id="project">
+                            <option value="" selected disabled hidden>projects</option>
+                            <option [value]="p.prId" *ngFor="let p of projects">{{p.projectName}}</option>
+                        </select>
+          </div>
                 <div class="form-group col-md-6">
                           
                           <select class="form-control" formControlName="department" placeholder="Department" id="department">
@@ -80,6 +87,7 @@
                                   <option [value]="d.dprtId" *ngFor="let d of departments">{{d.dprtName}}</option>
                               </select>
                 </div>
+               
                 <em *ngIf="validateControl('department') && hasError('department', 'required')">*Department is required</em>
                 <em *ngIf="validateControl('department') && hasError('department', 'maxlength')">*Maximum allowed length is 6 characters.</em>
                 <div class="form-group col-md-6" >
