--- a/src/app/events/two-day-trip/two-day-trip.component.html
+++ b/src/app/events/two-day-trip/two-day-trip.component.html
@@ -2,71 +2,153 @@
 
         
     <br/><br/>
-    <div id="all">
-      <div id="head">
-    <h3>Register for Annual Trip</h3>
-    </div>
-    <br/><br/>
-    
-    
-    <div class="col-md-8 py-5 border" id="newForm">
-    
-        <form [formGroup]="registerForm" autocomplete="off" novalidate (ngSubmit)="register(registerForm.value)">
-     
-           <div class="form-row">
-               <div class="form-group col-md-12">
-                 <label>Employee Id</label>
-                 <input  placeholder="" class="form-control" type="text" formControlName="employeeId" id="employeeId">
-                 <em *ngIf="validateControl('employeeId') && hasError('employeeId', 'required')">employeeId is required</em>
-                 </div>
-           </div>
+<div class="row">
+    <div class="col-sm-3"></div> 
+<div class="card" style="width: 80rem;">
+    <div class="card-body">
 
-           <div class="form-row">
-              <div class="form-group col-md-12">
-          <label for="transportationMode">Transportation Mode</label>
-          <select class="form-control" id="url" formControlName="transportationMode">
-            <option *ngFor="let contry of regForms" [value]="contry.id">{{contry.name}}</option>
+
+        <div class="col-md-12 py-5 border" id="newForm">
+               
+            <form [formGroup]="registerForm" autocomplete="off" novalidate (ngSubmit)="register(registerForm.value)">
+                <div id="head">
+                    
+                    <h3>Register</h3>
+                    </div>
+                    <br/><br/>
+               <div class="form-row">
+                 
+                   <div class="form-group col-md-10" id="f">
+                     <label>Name</label>
+                     <input  placeholder="" class="form-control" type="text" formControlName="name" id="name">
+                     <em *ngIf="validateControl('name') && hasError('name', 'required')">Name is required</em>
+                     </div>
+               </div>
+
+               <div class="form-row">
+                 
+                  <div class="form-group col-md-10" id="f">
+                    <label>Email</label>
+                    <input  placeholder="" class="form-control" type="email" formControlName="email" id="email">
+                    <em *ngIf="validateControl('email') && hasError('email', 'required')">Name is required</em>
+                    </div>
+              </div>
+    
+               <div class="form-row">
+                  <div class="form-group col-md-10 "id="f">
+                    <label>NIC</label>
+                    <input  placeholder="" class="form-control" type="text" formControlName="nic" id="nic">
+                    <em *ngIf="validateControl('nic') && hasError('nic', 'required')">NIC is required</em>
+                    </div>
+              </div>
+              <div class="form-row">
+                  <div class="form-group col-md-10"id="f">
+                     <label>Date of Birth</label>
+                    <input  placeholder="" class="form-control" type="date" formControlName="dob" id="dob">
+                    <em *ngIf="validateControl('dob') && hasError('dob', 'required')">Start date is required</em>
+                </div>    
+  </div>
+    
+               <div class="form-row">
+                  <div class="form-group col-md-10"id="f">
+              <label for="transportationMode">Mode of Transportation</label>
+              <select class="form-control" id="transportationMode" formControlName="transportationMode">
+                <option *ngFor="let contry of regForms" [value]="contry.id">{{contry.name}}</option>
+              </select>
+              </div>
+            </div>
+    
+            <div class="form-row">
+                <div class="form-group col-md-10"id="f">
+            <label for="accomadation">Accomadation</label>
+            <select class="form-control" id="accomadation" formControlName="accomadation">
+              <option *ngFor="let contry of accom" [value]="contry.id">{{contry.name}}</option>
+            </select>
+            </div>
+          </div>
+
+
+          <div class="form-row">
+              <div class="form-group col-md-10"id="f">
+          <label for="accomadation">Dietary Preferences</label>
+          <select class="form-control" id="mealType" formControlName="mealType">
+            <option *ngFor="let contry of accom" [value]="contry.id">{{contry.name}}</option>
           </select>
           </div>
         </div>
 
+
         <div class="form-row">
-            <div class="form-group col-md-12">
-        <label for="accomadation">Accomadation</label>
-        <select class="form-control" id="accomadation" formControlName="accomadation">
+            <div class="form-group col-md-10"id="f">
+        <label for="accomadation">Dietary Preferences</label>
+        <select class="form-control" id="gender" formControlName="gender">
           <option *ngFor="let contry of accom" [value]="contry.id">{{contry.name}}</option>
         </select>
         </div>
       </div>
-     
+         
 
-
-
-
-
+        <!--
+        <label id="f" for="gender">Gender</label>
         <div class="form-row">
-            <div class="form-group col-md-12">
-              <label>Number of Family Members</label>
-              <input  placeholder="" class="form-control" type="text" formControlName="numberOfFamilyMembers" id="numberOfFamilyMembers">
-              <em *ngIf="validateControl('numberOfFamilyMembers') && hasError('numberOfFamilyMembers', 'required')">numberOfFamilyMembers is required</em>
+            <div class="form-group col-md-10"id="f">
+            <div class="radio col-md-2">
+                <label><input type="radio" class="form-control" formControlName="gender">Male</label>
               </div>
-        </div>
-
-       <div class="form-row">
-          <div class="form-group">
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-danger" (click)="redirectToEventPage()" style="margin-left: 5px">Cancel</button>
-                        <button type="submit" class="btn btn-success" [disabled]="!registerForm.valid" style="margin-left: 25px">Register</button>
-                    </div>
-                </div>
-      </div>          
-     
-         </form>
-    </div>
-    <br/><br/>
+              <div class="radio">
+                <label><input type="radio" class="form-control" formControlName="gender">Female</label>
+              </div>
+              </div>
+      </div>
+    -->
     
-    </div>
+    
+            <div class="form-row">
+                <div class="form-group col-md-4" id="f">
+                  <label>Spouse Name</label>
+                  <input  placeholder="" class="form-control" type="text" formControlName="spouseName" id="numberOfFamilyMembers">
+                  
+                  </div>
+           
+                <div class="form-group col-md-3">
+                  <label>Spouse NIC</label>
+                  <input  placeholder="" class="form-control" type="text" formControlName="spouseNic" id="numberOfFamilyMembers">
+                  
+                  </div>
+            
+                <div class="form-group col-md-3">
+                   <label> Spouse Date of Birth</label>
+                  <input  placeholder="" class="form-control" type="date" formControlName="spouseDob" id="dob">
+                  
+              </div>    
+</div>
 
+
+    
+          
+          
+          <div class="form-row">
+              <div class="form-group">
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                            <button type="button" class="btn btn-danger" (click)="redirectToEventPage()" style="margin-left: 5px">Cancel</button>
+                            <button type="submit" class="btn btn-success" [disabled]="!registerForm.valid" style="margin-left: 25px">Register</button>
+                        </div>
+                    </div>
+          </div>
+         
+             </form>
+        </div>
+</div>
+</div>
+
+
+
+</div>
+
+
+
+
+   
    
   
      </body>
