change add task css

--- a/src/app/task/addtask/addtask.component.html
+++ b/src/app/task/addtask/addtask.component.html
@@ -3,21 +3,9 @@
 <section class="testimonial py-5" id="testimonial">
     <div class="container">
         <div class="row ">
-            <div class="col-md-4 py-5 text-white text-center " id="sideA">
-                <div class="sideA">
-                    <div class="card-body">
-                        <img src="assets/_image/cslogo.png" style="width:30%">
-                        
-                        <h2 class="py-3">Assign Tasks</h2>
-                        <p>Tation argumentum et usu, dicit viderer evertitur te has. Eu dictas concludaturque usu, facete detracto patrioque an per, lucilius pertinacia eu vel.
+            
   
-  </p>
-                    </div>
-                </div>
-            </div>
-  
-  
-            <div class="col-md-8 py-5 border" id="formV">
+            <div class="col-md-8  border ml-5" id="formV">
                     <form [formGroup]="taskForm"  autocomplete="off" novalidate (ngSubmit)="createTask(taskForm.value)">
 
                         
