--- a/src/styles.css
+++ b/src/styles.css
@@ -65,10 +65,10 @@ body { margin: 0; font-family: 'Roboto', sans-serif; }
   }
   
   .ng-invalid:not(form)  {
-    border-bottom: 2px solid rgb(176, 14, 35); /* red */
+    /*border-bottom: 2px solid rgb(176, 14, 35);  red */
     border-radius: 0px;
     border: none;
-    border-bottom: 2px solid rgb(176, 14, 35);
+    border-bottom: 1px solid rgb(176, 14, 35);
   }
 #back{
     background-color: rgb(176, 14, 35);
