image gallery update

--- a/src/app/pastevent/eventcard/eventcard.component.css
+++ b/src/app/pastevent/eventcard/eventcard.component.css
@@ -133,5 +133,5 @@ hover {
 .frontside .card .card-body img {
     width: 120px;
     height: 120px;
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
