--- a/src/app/pastevent/imageview/imageview.component.css
+++ b/src/app/pastevent/imageview/imageview.component.css
@@ -1,9 +1,61 @@
 .card{
+	height: 400px;
+	width: auto;
+	background: none;
+	margin: 5px;
+	border: none;
+    display: grid;
     
+}
+  
+.gallery{
+    background: linear-gradient(180deg, var(--yellow) 40% , var(--lightblue) 80% );
+   width: calc(100% - 100px);
+   padding-bottom: 10px;
+   text-align: center;
+   padding: 0 50px;
+   
+ }
+ .images{
+	width: 100%;
+	height: 400px;
+	 padding:20px; 
+	
+	transition: 0.7s all ease-in-out;
+	
+  }
+  .images:hover{
+	transform: scale(1.1);
+   
+  }
 
-    width: 20rem; height: 20rem; float: left;
-}
-.alignr{
-    align-items: center;
-}
+  /* .grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 1em;
+} */
+
+/* below code affect when display size lower than 800px. so we can arrange icons like below and can customize by with below code */
+@media screen and (max-width :1000px){
+	
+	
+	
+
+	
+	
+	.gallery{
+	  width: 100%;
+	  padding: 0;
+	   background: black;
+	}
+	
+	.images{
+	 
+	  padding: 0;
+	  width: 100%;
+	}
+	.images:hover{
+	  transform: scale(1.2);
+	}
+	}
 
