--- a/src/app/pastevent/imageview/imageview.component.html
+++ b/src/app/pastevent/imageview/imageview.component.html
@@ -75,13 +75,44 @@
 
 <div class="row">
   <div class="container">
-    <div class="col-12">
+    <div >
       <div class="gallery" class="row  card-group container">
 
-        <div *ngFor="let i of result" class="col-3">
+        <div *ngFor="let i of result" class="col-md-4">
           <div class="grid-container">
             <div class="card">
               <a><img class="images" [src]="ImageUrl+i.imageId" alt="Cinque Terre"> </a>
+           
+              <!-- <div class="card-body">
+            <h5 class="card-title">{{i.caption}}</h5>
+            <p class="card-text">Description:{{i.description}}</p>
+            <!-- <p class="card-text">EventId:{{i.eventId}}</p> -->
+            </div>
+          </div>
+
+
+
+        </div>
+        <div *ngFor="let i of result" class="col-md-4">
+          <div class="grid-container">
+            <div class="card">
+              <a><img class="images" [src]="ImageUrl+i.imageId" alt="Cinque Terre"> </a>
+           
+              <!-- <div class="card-body">
+            <h5 class="card-title">{{i.caption}}</h5>
+            <p class="card-text">Description:{{i.description}}</p>
+            <!-- <p class="card-text">EventId:{{i.eventId}}</p> -->
+            </div>
+          </div>
+
+
+
+        </div>
+        <div *ngFor="let i of result" class="col-md-4">
+          <div class="grid-container">
+            <div class="card">
+              <a><img class="images" [src]="ImageUrl+i.imageId" alt="Cinque Terre"> </a>
+           
               <!-- <div class="card-body">
             <h5 class="card-title">{{i.caption}}</h5>
             <p class="card-text">Description:{{i.description}}</p>
