--- a/src/app/SharePart/logged-header/logged-header.component.css
+++ b/src/app/SharePart/logged-header/logged-header.component.css
@@ -11,15 +11,25 @@
     font-size: 12pt;
 }
 #navBar a:hover{
-    color: rgb(255, 255, 255);
+    color: rgb(15, 1, 1);
     
-    -webkit-text-shadow: 0 30px 60px 0 rgba(250, 250, 250, 0.3);
+    -webkit-text-shadow: 0 30px 60px 0 rgba(71, 70, 70, 0.3);
     text-shadow: 0 30px 60px 0 rgba(247, 247, 247, 0.3);
     font-size: 12.5pt;
+}
+#drop a:hover{
+    color: black;
 }
 #navbarDropdownMenuLink{
 height: 45px;
 }
 #navbarimage{
     height: 50px;
+}
+#drop{
+    background-color: rgba(176, 14, 36, 0.815);
+}
+
+.x{
+    margin-left: 75%
 }
