--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,12 @@
     <div class="titleBar">
             <div class=" row ">
             <div class="col-2">
-                    <img src="assets/_image/logo-white.png" >
+                    <img src="assets/_image/logo-white.png" class="img-responsive pull-right">
             </div>
             <div class="col-8">
 
 
-                    <h1 >Event Managment System</h1>
+                    <!-- <h1 >Event Managment System</h1> -->
 
 
             </div>
